update get record
